[gd_scene load_steps=11 format=2]

[ext_resource path="res://sc/scn/sc/splles2.tscn" type="PackedScene" id=1]
[ext_resource path="res://sc/scn/sc/IronMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://sc/scn/sc/SnowMAP.tscn" type="PackedScene" id=3]
[ext_resource path="res://sc/scn/Unity2D山区背景像素平面素材_爱给网_aigei_com/Mountains/m8/PRE_ORIG_SIZE.png" type="Texture" id=4]
[ext_resource path="res://sc/u/u0a.tscn" type="PackedScene" id=5]
[ext_resource path="res://gs/c1.gd" type="Script" id=6]
[ext_resource path="res://scn/dbx/c1dbx1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scn/dbx/c1dbx0.tscn" type="PackedScene" id=8]
[ext_resource path="res://scn/dbx/c1dbx3.tscn" type="PackedScene" id=9]
[ext_resource path="res://scn/dbx/c1dbx2.tscn" type="PackedScene" id=10]

[node name="aircraft" type="Node2D"]
position = Vector2( 33, 1036 )
scale = Vector2( 3, 3 )
script = ExtResource( 6 )

[node name="PreOrigSize" type="Sprite" parent="."]
position = Vector2( 1007.83, -167.5 )
scale = Vector2( 3.49942, 2.67798 )
texture = ExtResource( 4 )

[node name="SnowMAP" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 1, 0, 3, 1, 0, 27, 1, 0, 65542, 1, 0, 65545, 1, 0, 65548, 1, 0, 65551, 1, 0, 65554, 1, 0, 65557, 1, 0, 65560, 1, 0 )

[node name="IronMap2" parent="." instance=ExtResource( 2 )]
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( -393184, 27, 0, -327651, 1073741827, 0, -262139, 16, 0, -262138, 16, 0, -262137, 16, 0, -262136, 16, 0, -262135, 16, 0, -262134, 16, 0, -262133, 16, 0, -262132, 16, 0, -262131, 16, 0, -262130, 16, 0, -262129, 16, 0, -262126, 16, 0, -262122, 16, 0, -262121, 16, 0, -262117, 16, 0, -262111, 16, 0, -262110, 16, 0, -262101, 16, 0, -196601, 1, 0, -196600, 16, 0, -196598, 16, 0, -196596, 1, 0, -196595, 16, 0, -196594, 16, 0, -196593, 16, 0, -196592, 16, 0, -196591, 16, 0, -196590, 16, 0, -196589, 16, 0, -196588, 16, 0, -196587, 16, 0, -196586, 16, 0, -196585, 16, 0, -196583, 16, 0, -196582, 16, 0, -196581, 16, 0, -196580, 16, 0, -196579, 16, 0, -196575, 16, 0, -196574, 16, 0, -196573, 16, 0, -196572, 16, 0, -196571, 16, 0, -196570, 16, 0, -196569, 16, 0, -196567, 16, 0, -196566, 16, 0, -196565, 16, 0, -196564, 16, 0, -196557, 16, 0, -196555, 16, 0, -196554, 1, 0, -131065, 16, 0, -131064, 16, 0, -131063, 16, 0, -131062, 16, 0, -131061, 16, 0, -131060, 16, 0, -131059, 16, 0, -131058, 16, 0, -131057, 16, 0, -131056, 16, 0, -131055, 16, 0, -131054, 16, 0, -131053, 16, 0, -131052, 16, 0, -131051, 16, 0, -131050, 1, 0, -131049, 16, 0, -131048, 16, 0, -131047, 16, 0, -131046, 16, 0, -131045, 16, 0, -131044, 1, 0, -131043, 16, 0, -131042, 16, 0, -131041, 16, 0, -131040, 16, 0, -131039, 1, 0, -131038, 16, 0, -131037, 16, 0, -131036, 16, 0, -131035, 16, 0, -131034, 16, 0, -131033, 16, 0, -131032, 16, 0, -131031, 16, 0, -131030, 1, 0, -131029, 16, 0, -131027, 16, 0, -131022, 16, 0, -131021, 16, 0, -131020, 16, 0, -131019, 16, 0, -131018, 1, 0, -131017, 16, 0, -65530, 16, 0, -65529, 16, 0, -65527, 16, 0, -65526, 16, 0, -65525, 16, 0, -65524, 16, 0, -65523, 16, 0, -65522, 1, 0, -65521, 16, 0, -65520, 16, 0, -65519, 1, 0, -65518, 16, 0, -65517, 16, 0, -65515, 16, 0, -65514, 16, 0, -65513, 1, 0, -65512, 16, 0, -65511, 16, 0, -65510, 16, 0, -65509, 16, 0, -65508, 16, 0, -65507, 16, 0, -65506, 16, 0, -65505, 16, 0, -65504, 16, 0, -65501, 16, 0, -65499, 16, 0, -65498, 1, 0, -65497, 16, 0, -65496, 16, 0, -65495, 16, 0, -65494, 16, 0, -65493, 16, 0, -65492, 16, 0, -65491, 16, 0, -65490, 16, 0, -65487, 16, 0, -65486, 16, 0, -65485, 16, 0, -65484, 16, 0, -65481, 16, 0, -65480, 16, 0, -65479, 16, 0, 13, 1, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 21, 16, 0, 23, 16, 0, 24, 16, 0, 25, 16, 0, 26, 16, 0, 27, 16, 0, 28, 1, 0, 29, 1, 0, 30, 16, 0, 32, 16, 0, 33, 16, 0, 34, 16, 0, 35, 16, 0, 37, 16, 0, 38, 1, 0, 39, 16, 0, 40, 16, 0, 42, 16, 0, 43, 16, 0, 44, 16, 0, 45, 1, 0, 47, 16, 0, 49, 16, 0, 50, 1, 0, 51, 16, 0, 56, 16, 0, 57, 1, 0, 60, 3, 0, 65553, 16, 0, 65554, 16, 0, 65555, 16, 0, 65556, 16, 0, 65562, 16, 0, 65566, 16, 0, 65567, 16, 0, 65568, 16, 0, 65569, 16, 0, 65570, 16, 0, 65571, 16, 0, 65572, 16, 0, 65573, 16, 0, 65574, 1, 0, 65575, 16, 0, 65576, 16, 0 )

[node name="IronMap" parent="." instance=ExtResource( 2 )]
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( -393204, 24, 0, -393191, 28, 0, -327675, 18, 0, -327674, 18, 0, -327673, 18, 0, -327672, 18, 0, -327671, 18, 0, -327669, 18, 0, -327668, 18, 0, -327667, 18, 0, -327666, 18, 0, -327665, 18, 0, -327664, 18, 0, -327663, 18, 0, -327662, 18, 0, -327661, 18, 0, -327658, 18, 0, -327657, 18, 0, -327655, 18, 0, -327654, 18, 0, -327653, 18, 0, -327652, 18, 0, -327648, 18, 0, -327647, 18, 0, -327646, 18, 0, -327645, 18, 0, -327644, 18, 0, -327643, 18, 0, -327642, 18, 0, -327641, 18, 0, -327637, 18, 0, -327636, 18, 0, -327635, 18, 0, -327634, 18, 0, -327633, 18, 0, -327632, 18, 0, -262136, 0, 0, -262129, 0, 0, -262121, 0, 0, -262111, 0, 0, -262103, 30, 0, -196600, 0, 0, -196593, 0, 0, -196585, 0, 0, -196580, 30, 0, -196575, 0, 0, -196567, 30, 0, -196566, 0, 0, -196554, 0, 0, -131064, 0, 0, -131060, 30, 0, -131057, 0, 0, -131049, 0, 0, -131044, 30, 0, -131039, 0, 0, -131031, 30, 0, -131030, 0, 0, -131022, 30, 0, -131018, 0, 0, -65535, 29, 0, -65529, 29, 0, -65526, 28, 0, -65524, 30, 0, -65521, 0, 0, -65513, 0, 0, -65508, 30, 0, -65494, 0, 0, -65486, 30, 0, -65477, 7, 0, 3, 15, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 15, 0, 12, 3, 0, 13, 25, 0, 15, 0, 0, 16, 7, 0, 21, 7, 0, 23, 0, 0, 28, 30, 0, 31, 26, 0, 33, 0, 0, 41, 27, 0, 42, 0, 0, 43, 7, 0, 50, 30, 0, 51, 7, 0, 53, 3, 0, 54, 3, 0, 55, 3, 0, 57, 23, 0, 58, 3, 0, 59, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 65568, 3, 0, 65569, 3, 0, 65570, 28, 0, 65571, 28, 0, 65572, 29, 0, 65573, 7, 0, 65574, 25, 0, 65577, 3, 0, 65578, 3, 0, 65579, 3, 0, 65580, 3, 0, 65581, 3, 0, 65582, 3, 0, 65583, 3, 0, 65584, 3, 0, 65585, 25, 0, 65586, 3, 0, 65587, 3, 0, 65588, 3, 0, 65589, 3, 0, 65591, 3, 0, 65592, 3, 0, 65593, 3, 0, 131091, 3, 0, 131092, 15, 0, 131106, 15, 0, 131107, 3, 0, 131108, 3, 0, 131109, 3, 0, 131110, 3, 0, 131111, 3, 0, 131112, 3, 0, 131113, 3, 0, 131120, 3, 0, 131121, 15, 0, 131122, 3, 0 )

[node name="splles2" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 64 )

[node name="splles2" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( -66, -32 )

[node name="splles3" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( -257, -65 )

[node name="splles4" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( -454, -64 )

[node name="splles5" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( -346, -224 )

[node name="splles6" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 58.6667, -64 )

[node name="splles7" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 504, -226.333 )

[node name="splles8" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 801, -224 )

[node name="splles9" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 961, -17 )

[node name="splles10" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 1180, -33 )

[node name="splles11" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 482, -1 )

[node name="splles12" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 575, -1.66666 )

[node name="splles13" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 548.333, -1 )

[node name="splles14" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 123.667, -225.667 )

[node name="splles15" parent="splles2" instance=ExtResource( 1 )]
position = Vector2( 29.3333, -31 )

[node name="u0a" parent="." instance=ExtResource( 5 )]
position = Vector2( 911, -302.333 )
scale = Vector2( 0.3, 0.3 )
collision_mask = 4

[node name="Camera0" type="Camera2D" parent="u0a"]
position = Vector2( -3.33325, 3.05176e-05 )
current = true
limit_left = 0
limit_top = -1900
limit_right = 9900
limit_bottom = 3000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.31
drag_margin_right = 0.32
editor_draw_drag_margin = true

[node name="dbx0" parent="." instance=ExtResource( 8 )]

[node name="dbx1" parent="." instance=ExtResource( 7 )]

[node name="dbx2" parent="." instance=ExtResource( 10 )]

[node name="dbx3" parent="." instance=ExtResource( 9 )]
